--- a/koordapp/main_app/static/css/preferences/preferences.css
+++ b/koordapp/main_app/static/css/preferences/preferences.css
@@ -22,6 +22,7 @@
         padding-left: 20px;
         color: var(--font_color);
         justify-self: center;
+        overflow-x: auto;
     }
 
     /* Style of change button*/
@@ -33,7 +34,7 @@
         font-size: 1.5rem;
         font-weight: 600;
         height: 50px;
-        width: 120px;
+        width: 150px;
         box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
 
         justify-self: end;
@@ -135,6 +136,7 @@
         padding-left: 20px;
         color: var(--font_color);
         justify-self: center;
+        overflow-x: auto;
     }
 
 
@@ -251,6 +253,7 @@
         padding-left: 5px;
         color: var(--font_color);
         justify-self: center;
+        overflow-x: auto;
     }
 
     /* Style of change button*/
